Fix search box sizing on mobile

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -93,7 +93,8 @@
     align-items: center;
     font-size: 1rem;
     flex-grow: 1;
-    /*padding-right: 20px*/
+    padding-right: 10px;
+        width:0;
 }
 
 /*match close button to title and postion size*/
@@ -109,7 +110,6 @@
 
 #search-box-container {
     border-bottom: 2px solid #fff;
-    width: 85%;
     margin-bottom: 5px;
     line-height: 1.2;
 }
